# indoors_test

./: Dockerfile  README.md  compose.yaml  pyproject.toml  render.yaml
app/: build.sh
app/api/: models.py  serializers.py  urls.py  views.py
app/api/migrations/: 0001_initial.py
app/chat/: consumers.py
app/core/: asgi.py  settings.py
frontend/: package-lock.json  package.json  server.js  static.json
frontend/src/: main.ts
frontend/src/app/: app.css  app.routes.ts  app.ts
frontend/src/app/cat-form/: cat-form.css  cat-form.html  cat-form.spec.ts  cat-form.ts
frontend/src/app/cat-list/: cat-list.css  cat-list.html  cat-list.spec.ts  cat-list.ts
frontend/src/app/chat/: chat.css  chat.html  chat.ts
frontend/src/app/login/: login.css  login.html  login.ts
frontend/src/app/models/: cat.ts
frontend/src/app/navbar/: navbar.css  navbar.html  navbar.ts
frontend/src/app/register/: register.css  register.html  register.ts
frontend/src/app/services/: auth.ts  cat.ts
